# ccman

./: .env.example  .gitignore  Cargo.toml  README.md  ccswitch.sh
.github/workflows/: ci.yml
ccswitch/: Cargo.toml
ccswitch-core/: Cargo.toml
ccswitch-core/src/: benchmark.rs  cost_calculator.rs  health_check.rs  key_manager.rs  lib.rs  provider.rs  settings.rs  usage_tracker.rs
ccswitch-db/: Cargo.toml
ccswitch-db/src/: lib.rs  migrations.rs  models.rs  pool.rs  repositories.rs
ccswitch/src/: cli.rs  main.rs  tui.rs
migrations/: 001_initial.sql  002_fix_pricing.sql
