[workspace]
members = ["ccswitch", "ccswitch-core", "ccswitch-db"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["gwd200cn@gmail.com"]
license = "MIT"

[workspace.dependencies]
# CLI/TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1.40", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
